--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -45,6 +45,8 @@
  ehren_saelianism_events_sigilianism_increase_tt:0 "It will push us to Sigilianist stance in this incident"
  ehren_saelianism_events_sigilianism_huge_increase_tt:0 "It will significantly push us to Sigilianist stance in this incident"
 
+ ehren_saelianism_events_balanced_start.tt:0 "We will support Moderates stance on this matter"
+
  ehren_saelianism_events_ehrenism_start.tt:0 "We will support Ehren stance on this matter"
  ehren_saelianism_events_ehrenism_increase_tt:0 "It will push us to Ehren stance in this incident"
  ehren_saelianism_events_ehrenism_huge_increase_tt:0 "It will significantly push us to Ehren stance in this incident"
