--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -40,6 +40,7 @@
  padosic:0 "Padosic"
  bratecian:0 "Bratecian"
  contrafian:0 "Contrafian"
+ novoregnian:0 "Novoregnian"
 
  ehrenic_group:0 "Ehrenic"
  ehren:0 "Ehren"
