--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -110,8 +110,17 @@
  ehren_saelianism_nifthem_end_ehrenists:0 "Ehrenists Victorious in Nifthem"
  desc_ehren_saelianism_nifthem_end_ehrenists:0 "Because of that our missionaries are devoted to converting"
  
+ ## Authority
+
+ incident_authority_reform_title:0 "Religious Authority Reform"
+ incident_authority_reform_desc:0 "Our religions is very disorganised and very chaotic in its doctrines. We should create an structure for our faith so we can work more efficiently."
  
- 
+ ## Authority
+
+ incident_reformation_title:0 "Reformation Response"
+ incident_reformation_desc:0 "Liemarians decided to seperate from Sigilian church and spread their doctrines. We need to choose how should we respond to this."
+
+
  #### Flavour events
  
  td_ehren_saelianism.100.t:0 "Ehrenist resurgence"
