--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -115,9 +115,46 @@
  incident_authority_reform_title:0 "Religious Authority Reform"
  incident_authority_reform_desc:0 "Our religions is very disorganised and very chaotic in its doctrines. We should create an structure for our faith so we can work more efficiently."
  
- ## Authority
 
- incident_reformation_title:0 "Reformation Response"
+ td_ehren_saelianism.8.t:0 "Question of Organisation"
+ td_ehren_saelianism.8.desc:0 "Our clergy is functioning in different types of organisation, everything is chaotic making any changes hard to implement. Nobody knows what type of structure would be the best for our religion. Sigilianists propose a singular head of faith that will rule over entire clergy in our country, Ehrenists demand that we give local priests ability to form local council and don't centralise our system. Moderates come with the idea that we should from a nationwide council with representatives from all regions."
+ td_ehren_saelianism.8.a:0 "Centralise our faith"
+ td_ehren_saelianism.8.b:0 "Local councils will do"
+
+ td_ehren_saelianism.9.t:0 "Organisations Spring Up"
+ td_ehren_saelianism.9.desc:0 "Clergymen in our country started to create new local organisations, Ehrenists decided to support this initiative but Sigilianists demand us to take action and help them create a countrywide unified organisation."
+
+ td_ehren_saelianism.9.a:0 "Unite them all"
+ td_ehren_saelianism.9.b:0 "Allow them to exist"
+ ehren_saelianism_events_authority_local_structure.tt:0 "Every province will get a 50% chance that it will recieve a local modifier."
+ ehren_saelianism_authority_centralised:0 "Countrywide Organisation"
+ desc_ehren_saelianism_authority_centralised:0 "We united all local organisations under this"
+ ehren_saelianism_authority_decentralised:0 "Local Organisation"
+ desc_ehren_saelianism_authority_decentralised:0 "Now they decide things by themselves"
+
+ td_ehren_saelianism.10.t:0 "Scandalous Priest"
+ td_ehren_saelianism.10.desc:0 "One of our priests decided to go against our church. Sigilianists want to punish him and denounce his words, but Ehrenists say that it's his right to do so."
+ td_ehren_saelianism.10.a:0 "Punish him"
+ td_ehren_saelianism.10.b:0 "Let him continue"
+ ehren_saelianism_authority_priest_punished:0 "Priest Punishied"
+ desc_ehren_saelianism_authority_priest_punished:0 "We forced an unorthodox priest to step down."
+ ehren_saelianism_authority_priest_allowed:0 "Priest Approved"
+ desc_ehren_saelianism_authority_priest_allowed:0 "We allow this priest to continue doing his thing."
+
+ td_ehren_saelianism.11.t:0 "Organisations Factionalism"
+ td_ehren_saelianism.11.desc:0 "At first all our organisation efforts were clear from direct rivalry between factions. But now clergymen started to pick sides and we need to react before it is to late. Do we support Ehrenists or Sigilianists? Maybe we force them to still work together?"
+ td_ehren_saelianism.11.a:0 "Support Sigilianists"
+ td_ehren_saelianism.11.b:0 "Force them to compromise"
+ td_ehren_saelianism.11.c:0 "Supports Ehrenists"
+
+
+
+
+
+
+ ## Reformation
+
+ incident_reformation_t:0 "Reformation Response"
  incident_reformation_desc:0 "Liemarians decided to seperate from Sigilian church and spread their doctrines. We need to choose how should we respond to this."
 
 
