liemarian loc + province loc + map batch 6/3

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1171,7 +1171,7 @@
  PROV1170:0 "Kuchax"
  PROV1171:0 "Kuatipetl"
  PROV1172:0 "1172"
- PROV1173:0 "1173"
+ PROV1173:0 "K'abchetz"
  PROV1174:0 "1174"
  PROV1175:0 "1175"
  PROV1176:0 "Gogirdas"
@@ -1202,25 +1202,25 @@
  PROV1201:0 "Taoxah"
  PROV1202:0 "Manayaz"
  PROV1203:0 "Dahami Bay"
- PROV1204:0 "1204"
- PROV1205:0 "1205"
+ PROV1204:0 "Pom'kahnitza"
+ PROV1205:0 "Puarcha"
  PROV1206:0 "Bay of Dochas"
- PROV1207:0 "1207"
- PROV1208:0 "1208"
- PROV1209:0 "1209"
+ PROV1207:0 "Ochk'nal"
+ PROV1208:0 "Kinimarkay"
+ PROV1209:0 "Nukoya'tz"
  PROV1210:0 "1210"
- PROV1211:0 "1211"
+ PROV1211:0 "Piriphakcha"
  PROV1212:0 "K'obpatah"
  PROV1213:0 "Panbah"
- PROV1214:0 "1214"
+ PROV1214:0 "Chanpuqka"
  PROV1215:0 "Ompoqatl"
  PROV1216:0 "Paracha"
- PROV1217:0 "1217"
+ PROV1217:0 "Hakuchabka"
  PROV1218:0 "Laabkot"
- PROV1219:0 "1219"
+ PROV1219:0 "Yolinxo"
  PROV1220:0 "Galeqan Sea"
- PROV1221:0 "1221"
- PROV1222:0 "1222"
+ PROV1221:0 "Lumkux"
+ PROV1222:0 "Pachulel"
  PROV1223:0 "1223"
  PROV1224:0 "1224"
  PROV1225:0 "Pholakis"
@@ -1239,7 +1239,7 @@
  PROV1238:0 "Abunae"
  PROV1239:0 "Hyrcedos"
  PROV1240:0 "Pellos"
- PROV1241:0 "1241"
+ PROV1241:0 "1241" #!
  PROV1242:0 "Momaaki Sea"
  PROV1243:0 "Cleideos"
  PROV1244:0 "Synoa"
@@ -1507,68 +1507,68 @@
  PROV1506:0 "Bahhib"
  PROV1507:0 "Otokoman"
  PROV1508:0 "Lemuyal"
- PROV1509:0 "1509"
- PROV1510:0 "1510"
- PROV1511:0 "1511"
- PROV1512:0 "1512"
- PROV1513:0 "1513"
+ PROV1509:0 "Matunitza"
+ PROV1510:0 "Witztukan"
+ PROV1511:0 "Marakucha"
+ PROV1512:0 "Uxul'tu"
+ PROV1513:0 "Wuaku'kutza"
  PROV1514:0 "1514"
- PROV1515:0 "1515"
- PROV1516:0 "1516"
- PROV1517:0 "1517"
- PROV1518:0 "1518"
- PROV1519:0 "1519"
+ PROV1515:0 "Waktis"
+ PROV1516:0 "Mukraxitza"
+ PROV1517:0 "Xilchitza"
+ PROV1518:0 "Hixich'en"
+ PROV1519:0 "Parcha"
  PROV1520:0 "1520"
  PROV1521:0 "1521"
  PROV1522:0 "1522"
  PROV1523:0 "1523"
  PROV1524:0 "1524"
  PROV1525:0 "1525"
- PROV1526:0 "1526"
+ PROV1526:0 "1526" #!
  PROV1527:0 "1527"
  PROV1528:0 "1528"
- PROV1529:0 "1529"
- PROV1530:0 "1530"
- PROV1531:0 "1531"
+ PROV1529:0 "Ku'lajax"
+ PROV1530:0 "Xilapacutlan"
+ PROV1531:0 "Kinchi"
  PROV1532:0 "1532"
- PROV1533:0 "1533"
+ PROV1533:0 "Ebuha"
  PROV1534:0 "Pahachok"
- PROV1535:0 "1535"
+ PROV1535:0 "Itziwika"
  PROV1536:0 "Minisan Approach"
- PROV1537:0 "1537"
+ PROV1537:0 "K'abach"
  PROV1538:0 "Kikutu"
- PROV1539:0 "1539"
+ PROV1539:0 "Kachuy"
  PROV1540:0 "Geslitian Sea"
- PROV1541:0 "1541"
- PROV1542:0 "1542"
- PROV1543:0 "1543"
+ PROV1541:0 "Ixkab'uh"
+ PROV1542:0 "Mapahuaca"
+ PROV1543:0 "Sutza'mal"
  PROV1544:0 "1544"
- PROV1545:0 "1545"
+ PROV1545:0 "Fakabchen"
  PROV1546:0 "Keyepa"
- PROV1547:0 "1547"
- PROV1548:0 "1548"
- PROV1549:0 "1549"
- PROV1550:0 "1550"
- PROV1551:0 "1551"
- PROV1552:0 "1552"
- PROV1553:0 "1553"
- PROV1554:0 "1554"
- PROV1555:0 "1555"
- PROV1556:0 "1556"
- PROV1557:0 "1557"
- PROV1558:0 "1558"
+ PROV1547:0 "Marixik"
+ PROV1548:0 "Ho'chapik"
+ PROV1549:0 "Ipachkan"
+ PROV1550:0 "Ka'yapa"
+ PROV1551:0 "South Geslitian Sea"
+ PROV1552:0 "Eastern Tahari Current"
+ PROV1553:0 "Kuxpix"
+ PROV1554:0 "Tawitzak"
+ PROV1555:0 "Unulunen"
+ PROV1556:0 "Matzaki"
+ PROV1557:0 "Itz'pach"
+ PROV1558:0 "Pachulel"
  PROV1559:0 "1559"
  PROV1560:0 "1560"
  PROV1561:0 "Northern Frontier Sea"
  PROV1562:0 "1562"
  PROV1563:0 "1563"
- PROV1564:0 "1564"
- PROV1565:0 "1565"
+ PROV1564:0 "Yaxu'te"
+ PROV1565:0 "Wanachti"
  PROV1566:0 "Shaboni Coast"
- PROV1567:0 "1567"
+ PROV1567:0 "Nabku'tzil"
  PROV1568:0 "Bradbrem Strait"
  PROV1569:0 "1569"
- PROV1570:0 "1570"
+ PROV1570:0 "Yawnitchak"
  PROV1571:0 "1571"
  PROV1572:0 "1572"
  PROV1573:0 "Central Arctic Sea"
