--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -16,7 +16,7 @@
  liemarian.3.a:0 "Maybe they are right..."
  liemarian.3.b:0 "This will blow over"
  liemarian.4.t:0 "Council of Tiepol"
- liemarian.4.desc:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+ liemarian.4.desc:0 "The Liemarian debates about doctrinal unity have reached a breaking point so much so that it results in fist fights between priests. This led to the annoucement of Council of Tiepol, where new Liemarian doctrines will be set once and for all. There are 2 major groupings - Cesaronians and Palmisanians. Palmisanians believe that the imperial system was only partially flawed and overall unity and power of the Vicarius, while Palmisanians want to give each nation higher degree of autonomy in their practices and doctrines."
  liemarian.4.a:0 "Let the Council commence."
  settle_the_doctrine_title:0 "Settle the Doctrines"
  settle_the_doctrine_desc:0 "As the liemarian community grows the cracks are being slowly revealed. Many rulers see our faith as a way to gain autonomy from the emperor, while other seek only absolute power. With many branches drifting away we need to bring them back together."
@@ -57,41 +57,41 @@
  liemarian.8.desc:0 "A cardinal who had previously stayed in [Root.GetName], close to the border, has now moved out of our nation entirely and shifted his allegiance to our neighbors. The [From.GetAdjective] agents who bribed him to betray us probably thought we would not notice their hand in the matter, but they were wrong. This intentional sabotage of our influence in the Curia is unacceptable and will not stand unchallenged."
  liemarian.8.a:0 "It is an affront to both us and our Church."
 
- liemarian.9.t:0 "Episcopal Controller found illegitimate!"
- liemarian.9.desc:0 " "
+ liemarian.9.t:0 "The Episcopus found illegitimate!"
+ liemarian.9.desc:0 "Many priests in the Episcopate have been concerned about results of recent election of [PAP.monarch.GetName] as the new Episcopus Maximus. He has been found to have strong connections with [Root.monarch.GetName]. When this information came to light, [PAP.monarch.GetName] quickly joined the episcopes, claiming that our king tried to bribe him and other priests during the election. His confession is clearly false, but most of the Liemarian community decided to side with this liar."
  liemarian.9.a:0 "These sigilian spies want to undermine our church's cohesion!"
  liemarian.9.b:0 "Even if they are not right, we should yield in to avoid another schism."
  liemarian.10.t:0 "The Flourishment of Religious Syncretism"
- liemarian.10.desc:0 " "
+ liemarian.10.desc:0 "Religious syncretism with roots going as far as during the rule of Saelius, has been an important conversion tactic against even the staunchest heathens. Now, with much lighter and more free doctrines than ever, thanks to the abolition of Universalist approach, syncretism with local population is more apparent."
  liemarian.10.a:0 "Let it flourish further"
  liemarian.10.b:0 "Stop it! It's Heretical!"
  liemarian.11.t:0 "Cardinal opposes church doctrine unity"
- liemarian.11.desc:0 " "
- liemarian.11.a:0 "It is what it is"
+ liemarian.11.desc:0 "Debates about the true and unified Liemarian are getting more heated with each day. Street fights between priests and monks break out in major cities. Even one of our most influential theologians has voiced their opinion on the topic."
+ liemarian.11.a:0 "It iHs what it is"
  liemarian.11.b:0 "Bribe him to change his stance"
  liemarian.12.t:0 "Cardinal supports church doctrine unity"
- liemarian.12.desc:0 " "
+ liemarian.12.desc:0 "Debates about the true and unified Liemarian are getting more heated with each day. Street fights between priests and monks break out in major cities. Even one of our most influential theologians has voiced their opinion on the topic."
  liemarian.12.a:0 "God bless"
  liemarian.13.t:0 "Active Liemarian missions"
- liemarian.13.desc:0 " "
+ liemarian.13.desc:0 "Zealousness surrouding the rapid spread of Liemarianism across the Sigilian community has created a new generation of missionaries, willing to spread their views of the world to us. Some of those young men came to our lands to manifest their doctrines in towns and villages. Many worry about these activities and wish for us to take action."
  liemarian.13.a:0 "Support the missions"
  liemarian.13.b:0 "Reroute the missionaries into administrative positions"
  
  liemarian.14.t:0 "Liemarian Missions active in our country!" #Events from 14 to 15 reuse the same localisation
- liemarian.14.desc:0 " "
+ liemarian.14.desc:0 "Zealousness surrouding the rapid spread of Liemarianism across the Sigilian community has created a new generation of missionaries, willing to spread their views of the world to us. Some of those young men came to our lands to manifest their doctrines in towns and villages. Many worry about these activities and wish for us to take action."
  liemarian.14.a:0 "Let them be"
  liemarian.14.b:0 "Root them out!"
  liemarian.15.c:0 "Let's adopt this faith!"
  TD_Liemarian_double_event_chance_tt:0 "If this option is picked, this type of event will fire twice as often until the end of the age of Reformation!"
  
  liemarian.16.t:0 "Episcopal Diplomacy"
- liemarian.16.desc:0 " "
+ liemarian.16.desc:0 "Maintaining proper diplomatic relation with the Episcopate is crucial for not only to our religious but also political stability."
  liemarian.16.a:0 "Send an Envoy"
  liemarian.16.b:0 "Do not send any Envoys"
  liemarian.16.c:0 "Send generous gifts along with an envoy"
  
  liemarian.17.t:0 "Support of Liemarian Church"
- liemarian.17.desc:0 " "
+ liemarian.17.desc:0 "The Episcopus Maximus needs money for hookers"
  liemarian.17.a:0 "Bestow our prestige to demand help from our other subjects for them"
  liemarian.17.b:0 "Lend them money from our coffers"
  liemarian.17.c:0 "Do not help them"
