--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -384,10 +384,10 @@
  CURIA_CONTRIBUTION_ENTRY:0 "$ESTATE$ in $NAME|Y$ ($PERC|2%$): $VAL|Y2$¤\n"
  AND_FROM_X_MORE_COUNTRIES:0 "and there are $NUM|Y$ minor countries contributing as well..."
  # Call ecumenical council
- CURIA_CALL_ECUMENICAL_COUNCIL:0 "Spend $COST|Y$¤ to call the Ecumenical Council. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain §Y$INFLUENCE$§W Invested influence towards becoming the next Papal Controller."
+ CURIA_CALL_ECUMENICAL_COUNCIL:0 "Spend $COST|Y$¤ to call the Ecumenical Council. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain §Y$INFLUENCE$§W Invested influence towards becoming the next Episcopal Controller."
  CURIA_CALL_ECUMENICAL_COUNCIL_NOT_ENOUGH_MONEY:0 "§RYou need $COST|Y$¤ to call the Ecumenical Council, but you only have $AVAILABLE|Y$¤§!"
  CURIA_CALL_ECUMENICAL_COUNCIL_TITLE:0 "Call Ecumenical Council"
- CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "Do you want to spend $COST|Y$¤ to call the Ecumenical Council? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain §Y$INFLUENCE$§W Invested influence towards becoming the next Papal Controller."
+ CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "Do you want to spend $COST|Y$¤ to call the Ecumenical Council? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain §Y$INFLUENCE$§W Invested influence towards becoming the next Episcopal Controller."
  # Buy Indulgence
  CURIA_BUY_INDULGENCE:1 "Spend $COST|Y$¤ to buy Indulgence for your sins. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly PaEpiscopal Influenceor $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
  CURIA_BUY_INDULGENCE_EXCOMMUNICATED:0 "You are Excommunicated, so the price for your Indulgence is $MULTIPLIER|Y$ times bigger. The Pope, on the other hand, will reward your proof of faith by lifting it and will not try Excommunicate you again for $YEARS|Y$ years."
@@ -1075,8 +1075,8 @@
  IMPERIAL_INCIDENT_SELECTED_OPTION:0 "\nThe §YEmperor§! favors this option."
  NONE_TEXT:0 "None"
  GUI_SCALE_TOOLTIP:0 "This feature is in an experimental state and might have issues if not set to x1.0."
- PAPACY_HARSH:0 "Harsh"
- PAPACY_CONCILATORY:0 "Conciliatory"
+ PAPACY_HARSH:0 "Palmisanian"
+ PAPACY_CONCILATORY:0 "Cesaronian"
  PAPACY_PICK_GOLDEN_BULL:0 "Pick a Golden Bull"
  SPAWN_EVENT_ONLY_DAYS:0 " in $WHEN|Y$"
  SPAWN_EVENT_ONLY_RANDOM_DAYS:0 " in §Y0 to $WHEN$§!"
