--- a/localisation/goose_1_35_l_english.yml
+++ b/localisation/goose_1_35_l_english.yml
@@ -58,7 +58,7 @@
  IMPROVED_INFRASTRUCTURE_MAP_TOOLTIP:0 "$PROVINCE|Y$ had its infrastructure expanded $AMOUNT$ times."
  SCORCHED_EARTH_MAP_TOOLTIP:0 "$PROVINCE|Y$ will have Scorched Earth until $DATE|Y$."
  NO_SCORCHED_EARTH_MAP_TOOLTIP:0 "$PROVINCE|Y$ doesn't have Scorched Earth."
- SET_POPE_DESC:0 "$COUNTRYNAME$ will become the Papal Controller."
+ SET_POPE_DESC:0 "$COUNTRYNAME$ will become the Episcopal Controller."
  EFFECT_REMOVE_POWER_PROJECTION:0 "$TAG$ will lose $AMOUNT|R$ Power Projection."
  NO_CLAIM_COST_INCREASE:0 "Cost for additional claims is ignored due to our modifiers."
  MODIFIER_NO_CLAIM_COST_INCREASEMENT:0 "No additional claim cost"
