--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -118,3 +118,6 @@
  ignidunta_cutting_edge_innovations_desc:0 "Trading in Pemenia has brought many innovations to our land like silk, 'toilet paper' and - most importantly - corned gunpowder. Thanks to its explosive properties it was quickly adopted by many military engineers and captains in our nation."
  ignidunta_government_and_its_people:0 "Government and the People"
  ignidunta_government_and_its_people_desc:0 "With republican tradition dating back to old camarian culture and introduction of merchant board system, the idea of democracy became very popular not only among our population but also the ruling elite, seeing it as a way to understand needs of the country for prosperity and patriotism."
+
+ pistoleros_reform:0 "Pistoleros"
+ pistoleros_reform_desc:0 "Early adoption of blackpowder weaponry in the military allowed us to gain advantage over our enemies."
