--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -97,3 +97,6 @@
 
  tonatitlazoltec_nation_title:0 "Restore the old Kingdom @TOZ"
  tonatitlazoltec_nation_desc:0 "Tonatitlazoltec is the name modern scholars gave to the fallen empire of Teotloqitlani empire before it was conquered by eastern invaders. As we reclaim our birthright we will once again proclaim ourselves the land of the sun."
+
+ panpallpica_nation_title:0 "Establish Panpallpan Superiority @PAL"
+ panpallpica_nation_desc:0 "Our exiles settled this land, unified it and made it prosper. It is natural we became one with it and establish ourselves as its true owner."
