--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -149,15 +149,24 @@
 
  td_ehren_saelianism.12.t:0 "Head of Faith Chosen"
  td_ehren_saelianism.12.desc:0 "With Sigilianists coming victorious from this entire debate, our faith is now officially united under one person."
- td_ehren_saelianism.12.a:0 "Good"
+ td_ehren_saelianism.12.a:0 "Change our strucutre now"
+ td_ehren_saelianism.12.b:0 "We don't need that"
+ ehren_saelianism_head_of_faith_reform:0 "Appoint a Head of Faith"
+ ehren_saelianism_head_of_faith_reform_desc:0 "We will appoint a singular head of faith that will support us."
 
  td_ehren_saelianism.13.t:0 "State Council Established"
  td_ehren_saelianism.13.desc:0 "With Moderates coming victorious from this entire debate, our faith is now protected by countrywide council"
- td_ehren_saelianism.13.a:0 "Good"
+ td_ehren_saelianism.13.a:0 "Change our strucutre now"
+ td_ehren_saelianism.13.b:0 "We don't need that"
+ ehren_saelianism_country_council_reform:0 "Establish a Countrywide Council"
+ ehren_saelianism_country_council_reform_desc:0 "We will gather clergymen from our country on this council so we can work better."
 
  td_ehren_saelianism.14.t:0 "Local Councils Formed"
- td_ehren_saelianism.14.desc:0 "With Ehrenists coming victorious from this entire debate, our faith is organised by small communities"
- td_ehren_saelianism.14.a:0 "Good"
+ td_ehren_saelianism.14.desc:0 "With Ehrenists coming victorious from this entire debate, our faith is organised by small communities."
+ td_ehren_saelianism.14.a:0 "Change our strucutre now"
+ td_ehren_saelianism.14.b:0 "We don't need that"
+ ehren_saelianism_local_councils_reform:0 "Enpower Local Councils"
+ ehren_saelianism_local_councils_reform_desc:0 "We will give more powers to local councils so we don't need to pay that much attention to them."
 
  ## Reformation
 
