--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -49,3 +49,18 @@
  his_ambition:0 "Ambition"
  his_ambition_desc:0 "The dreams of Saletiarn are just as big as the World itself."
  wirosepan_select_aspect:0 "Select Favoured Aspect of Saelius"
+
+ argenia.1.t:0 "Death of Sexbald"
+ argenia.1.desc:0 "The sad passing of the late King Sexbald of Wyrmegnac has caused unrest among the nobility who now wish to grant the crown of Argenia to [ANI.monarch.GetName]."
+ argenia.1.a:0 "So be it."
+ argenia.1.b:0 "[Root.monarch.GetName] will keep on fighting!"
+ argenia.2.t:0 ""Death of Sexbald"
+ argenia.2.desc:0 "News are coming from the illegitimate domain of your family. Self-proclaimed king of Argenia - Sexbald - has passed away and the local nobility decided to elect our ruler as the true king of Argenia."
+ argenia.2.a:0 "Excellent."
+ argenia.3.t:0 "Death of Osmund"
+ argenia.3.desc:0 "The sad passing of the late King Osmund II of Wyrmegnac has caused unrest among the nobility who now wish to grant the crown of Argenia to [ETH.monarch.GetName]."
+ argenia.3.a:0 "So be it."
+ argenia.3.b:0 "[Root.monarch.GetName] will keep on fighting!"
+ argenia.4.t:0 "Death of Osmund"
+ argenia.4.desc:0 "News are coming from the illegitimate domain of your family. Self-proclaimed king of Argenia - Osmund - has passed away and the local nobility decided to elect our ruler as the true king of Argenia."
+ argenia.4.a:0 "Excellent."
