seal clubbing event

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -66,7 +66,7 @@
  argenia.4.a:0 "Excellent."
 
  argenia.5.t:0 "The Western Isle"
- argenia.5.desc:0 "For a long time there have been rumors of an island near the western coast of Dorchia and over the years many myths and legends grew about this magical land. Some believe it to be a home of 300 virgins who would tend to wounds and cure any sickness of weary travellers, but other believe that it's populated by vile monsters threatening the lives of any sailors who wish to even come near the island.\n\nNow our brave seamen reached to us with a proposal to colonize the island. They argue that it's location makes it a great outpost for whaling and fishing. While seemingly absurd maybe there is some merit to this project?"
+ argenia.5.desc:0 "For a long time there have been rumors of an island near the western coast of Dorchia and over the years many myths and legends grew about this magical land. Some believe it to be a home of 300 virgins who would tend to wounds and cure any sickness of weary travellers, but other believe that it's populated by vile monsters threatening the lives of any sailors who wish to even come near the island.\n\nNow our brave seamen reached to us with a proposal to colonize the island. They argue that it's location makes it a great outpost for sealing and open-sea whaling. While seemingly absurd, maybe there is some merit to this project?"
  argenia.5.a:0 "Let's Set it up."
  argenia.5.b:0 "Maybe there's more land west of Lanta?"
- argenia.5.c:0 "Why? I don't even like whales!"
+ argenia.5.c:0 "Why? I don't even like whales! Or seals for that matter..."
