New world prov names for nahuatl
Random bullshit go! Also, Huitzan.

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -1156,21 +1156,21 @@
  PROV_ADJ1155:0 "1155"
  PROV_ADJ1156:0 "1156"
  PROV_ADJ1157:0 "1157"
- PROV_ADJ1158:0 "1158"
+ PROV_ADJ1158:0 "Icpacxochitl"
  PROV_ADJ1159:0 "1159"
- PROV_ADJ1160:0 "1160"
- PROV_ADJ1161:0 "1161"
+ PROV_ADJ1160:0 "Teocuitlahua"
+ PROV_ADJ1161:0 "Mayaquen"
  PROV_ADJ1162:0 "1162"
- PROV_ADJ1163:0 "1163"
- PROV_ADJ1164:0 "1164"
+ PROV_ADJ1163:0 "Ichinoa"
+ PROV_ADJ1164:0 "Tlacati"
  PROV_ADJ1165:0 "1165"
- PROV_ADJ1166:0 "1166"
- PROV_ADJ1167:0 "1167"
+ PROV_ADJ1166:0 "Tlatla"
+ PROV_ADJ1167:0 "Iztac"
  PROV_ADJ1168:0 "1168"
  PROV_ADJ1169:0 "1169"
  PROV_ADJ1170:0 "1170"
  PROV_ADJ1171:0 "1171"
- PROV_ADJ1172:0 "1172"
+ PROV_ADJ1172:0 "Quiyon"
  PROV_ADJ1173:0 "1173"
  PROV_ADJ1174:0 "1174"
  PROV_ADJ1175:0 "1175"
@@ -1208,7 +1208,7 @@
  PROV_ADJ1207:0 "1207"
  PROV_ADJ1208:0 "1208"
  PROV_ADJ1209:0 "1209"
- PROV_ADJ1210:0 "1210"
+ PROV_ADJ1210:0 "Anecotonaliztica"
  PROV_ADJ1211:0 "1211"
  PROV_ADJ1212:0 "1212"
  PROV_ADJ1213:0 "1213"
@@ -1409,18 +1409,18 @@
  PROV_ADJ1408:0 "Bruzhas"
  PROV_ADJ1409:0 "1409"
  PROV_ADJ1410:0 "1410"
- PROV_ADJ1411:0 "1411"
- PROV_ADJ1412:0 "1412"
+ PROV_ADJ1411:0 "Temamani"
+ PROV_ADJ1412:0 "Maccuauhuitl"
  PROV_ADJ1413:0 "1413"
- PROV_ADJ1414:0 "1414"
- PROV_ADJ1415:0 "1415"
- PROV_ADJ1416:0 "1416"
- PROV_ADJ1417:0 "1417"
+ PROV_ADJ1414:0 "Coztic"
+ PROV_ADJ1415:0 "Miztli"
+ PROV_ADJ1416:0 "Teocuitlaquixtiloyan"
+ PROV_ADJ1417:0 "Macuahuitl"
  PROV_ADJ1418:0 "1418"
  PROV_ADJ1419:0 "1419"
  PROV_ADJ1420:0 "1420"
- PROV_ADJ1421:0 "1421"
- PROV_ADJ1422:0 "1422"
+ PROV_ADJ1421:0 "Ahuaztli"
+ PROV_ADJ1422:0 "Iyectiloca"
  PROV_ADJ1423:0 "1423"
  PROV_ADJ1424:0 "1424"
  PROV_ADJ1425:0 "1425"
@@ -1428,61 +1428,61 @@
  PROV_ADJ1427:0 "1427"
  PROV_ADJ1428:0 "1428"
  PROV_ADJ1429:0 "1429"
- PROV_ADJ1430:0 "1430"
- PROV_ADJ1431:0 "1431"
- PROV_ADJ1432:0 "1432"
- PROV_ADJ1433:0 "1433"
- PROV_ADJ1434:0 "1434"
- PROV_ADJ1435:0 "1435"
+ PROV_ADJ1430:0 "Huitzan"
+ PROV_ADJ1431:0 "Motlatlaliliani"
+ PROV_ADJ1432:0 "Centlacuitlanahuatectl"
+ PROV_ADJ1433:0 "Xochitotol"
+ PROV_ADJ1434:0 "Cuicanitototl"
+ PROV_ADJ1435:0 "Cuicatiliztli"
  PROV_ADJ1436:0 "1436"
- PROV_ADJ1437:0 "1437"
- PROV_ADJ1438:0 "1438"
- PROV_ADJ1439:0 "1439"
- PROV_ADJ1440:0 "1440"
+ PROV_ADJ1437:0 "Choquiliztli"
+ PROV_ADJ1438:0 "Cuauhchayahuallo"
+ PROV_ADJ1439:0 "Tepozhuitzoctli"
+ PROV_ADJ1440:0 "Tlaximalli"
  PROV_ADJ1441:0 "1441"
- PROV_ADJ1442:0 "1442"
- PROV_ADJ1443:0 "1443"
- PROV_ADJ1444:0 "1444"
- PROV_ADJ1445:0 "1445"
+ PROV_ADJ1442:0 "Xochimaca"
+ PROV_ADJ1443:0 "Papachcac"
+ PROV_ADJ1444:0 "Cuauhtencoztli"
+ PROV_ADJ1445:0 "Xiuhtoctlaolli"
  PROV_ADJ1446:0 "1446"
- PROV_ADJ1447:0 "1447"
- PROV_ADJ1448:0 "1448"
- PROV_ADJ1449:0 "1449"
- PROV_ADJ1450:0 "1450"
- PROV_ADJ1451:0 "1451"
- PROV_ADJ1452:0 "1452"
- PROV_ADJ1453:0 "1453"
- PROV_ADJ1454:0 "1454"
+ PROV_ADJ1447:0 "Ichcame"
+ PROV_ADJ1448:0 "Michaxiliztli"
+ PROV_ADJ1449:0 "Cuacuauhtentzone"
+ PROV_ADJ1450:0 "Atlaquetzalli"
+ PROV_ADJ1451:0 "Teoamoxtli"
+ PROV_ADJ1452:0 "Pixquiztli"
+ PROV_ADJ1453:0 "Tlachicahualiztli"
+ PROV_ADJ1454:0 "Xuxuchitla"
  PROV_ADJ1455:0 "1455"
  PROV_ADJ1456:0 "1456"
  PROV_ADJ1457:0 "1457"
  PROV_ADJ1458:0 "1458"
  PROV_ADJ1459:0 "1459"
- PROV_ADJ1460:0 "1460"
- PROV_ADJ1461:0 "1461"
+ PROV_ADJ1460:0 "Ichcatilmatli"
+ PROV_ADJ1461:0 "Icuitl"
  PROV_ADJ1462:0 "Ayanihati Coast"
  PROV_ADJ1463:0 "Qaevan Sea"
  PROV_ADJ1464:0 "1464"
- PROV_ADJ1465:0 "1465"
- PROV_ADJ1466:0 "1466"
+ PROV_ADJ1465:0 "Tetepoz"
+ PROV_ADJ1466:0 "Teocuitlacozcatl"
  PROV_ADJ1467:0 "1467"
- PROV_ADJ1468:0 "1468"
- PROV_ADJ1469:0 "1469"
- PROV_ADJ1470:0 "1470"
- PROV_ADJ1471:0 "1471"
- PROV_ADJ1472:0 "1472"
- PROV_ADJ1473:0 "1473"
- PROV_ADJ1474:0 "1474"
- PROV_ADJ1475:0 "1475"
- PROV_ADJ1476:0 "1476"
- PROV_ADJ1477:0 "1477"
- PROV_ADJ1478:0 "1478"
+ PROV_ADJ1468:0 "Xochatl"
+ PROV_ADJ1469:0 "Iyetl"
+ PROV_ADJ1470:0 "Aceitecuahuitl"
+ PROV_ADJ1471:0 "Cuacuauhpiya"
+ PROV_ADJ1472:0 "Tlapohualamoxtli"
+ PROV_ADJ1473:0 "Tecuampiltontli"
+ PROV_ADJ1474:0 "Mizconetl"
+ PROV_ADJ1475:0 "Caxpialoyan"
+ PROV_ADJ1476:0 "Tletzintli"
+ PROV_ADJ1477:0 "Amatepetl"
+ PROV_ADJ1478:0 "Azcapotzalli"
  PROV_ADJ1479:0 "1479"
- PROV_ADJ1480:0 "1480"
+ PROV_ADJ1480:0 "Potzalli"
  PROV_ADJ1481:0 "1481"
  PROV_ADJ1482:0 "1482"
- PROV_ADJ1483:0 "1483"
- PROV_ADJ1484:0 "1484"
+ PROV_ADJ1483:0 "Cuahuitl"
+ PROV_ADJ1484:0 "Tepeticpac"
  PROV_ADJ1485:0 "1485"
  PROV_ADJ1486:0 "1486"
  PROV_ADJ1487:0 "1487"
@@ -1518,15 +1518,15 @@
  PROV_ADJ1517:0 "1517"
  PROV_ADJ1518:0 "1518"
  PROV_ADJ1519:0 "1519"
- PROV_ADJ1520:0 "1520"
- PROV_ADJ1521:0 "1521"
+ PROV_ADJ1520:0 "Aneloloni"
+ PROV_ADJ1521:0 "Tzotzomatli"
  PROV_ADJ1522:0 "1522"
- PROV_ADJ1523:0 "1523"
+ PROV_ADJ1523:0 "Quentli"
  PROV_ADJ1524:0 "1524"
- PROV_ADJ1525:0 "1525"
+ PROV_ADJ1525:0 "Neolololli"
  PROV_ADJ1526:0 "1526"
- PROV_ADJ1527:0 "1527"
- PROV_ADJ1528:0 "1528"
+ PROV_ADJ1527:0 "Xochicuauhtla"
+ PROV_ADJ1528:0 "Tlalmanqui"
  PROV_ADJ1529:0 "1529"
  PROV_ADJ1530:0 "1530"
  PROV_ADJ1531:0 "1531"
