--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1156,21 +1156,21 @@
  PROV1155:0 "Belezzan Approach"
  PROV1156:0 "Hawaldvi Coast"
  PROV1157:0 "1157"
- PROV1158:0 "1158"
+ PROV1158:0 "Icpacxochitl"
  PROV1159:0 "Dakhilian Sea"
- PROV1160:0 "1160"
- PROV1161:0 "1161"
+ PROV1160:0 "Teocuitlahua"
+ PROV1161:0 "Mayaquen"
  PROV1162:0 "1162"
- PROV1163:0 "1163"
- PROV1164:0 "1164"
+ PROV1163:0 "Ichinoa"
+ PROV1164:0 "Tlacati"
  PROV1165:0 "Ktuhke Bay"
- PROV1166:0 "1166"
- PROV1167:0 "1167"
+ PROV1166:0 "Tlatla"
+ PROV1167:0 "Iztac"
  PROV1168:0 "Mathilda's Bay"
  PROV1169:0 "Jiegnorran Sea"
  PROV1170:0 "Kuchax"
  PROV1171:0 "Kuatipetl"
- PROV1172:0 "1172"
+ PROV1172:0 "Quiyon"
  PROV1173:0 "K'abchetz"
  PROV1174:0 "1174"
  PROV1175:0 "1175"
@@ -1208,7 +1208,7 @@
  PROV1207:0 "Ochk'nal"
  PROV1208:0 "Kinimarkay"
  PROV1209:0 "Nukoya'tz"
- PROV1210:0 "1210"
+ PROV1210:0 "Anecotonaliztica"
  PROV1211:0 "Piriphakcha"
  PROV1212:0 "K'obpatah"
  PROV1213:0 "Panbah"
@@ -1409,18 +1409,18 @@
  PROV1408:0 "Bruzhas"
  PROV1409:0 "Siuatepetl"
  PROV1410:0 "1410"
- PROV1411:0 "1411"
- PROV1412:0 "1412"
+ PROV1411:0 "Temamani"
+ PROV1412:0 "Maccuauhuitl"
  PROV1413:0 "1413"
- PROV1414:0 "1414"
- PROV1415:0 "1415"
- PROV1416:0 "1416"
- PROV1417:0 "1417"
+ PROV1414:0 "Coztic"
+ PROV1415:0 "Miztli"
+ PROV1416:0 "Teocuitlaquixtiloyan"
+ PROV1417:0 "Macuahuitl"
  PROV1418:0 "Sipakatli"
  PROV1419:0 "Apaseman Coast"
  PROV1420:0 "Sokialte"
- PROV1421:0 "1421"
- PROV1422:0 "1422"
+ PROV1421:0 "Ahuaztli"
+ PROV1422:0 "Iyectiloca"
  PROV1423:0 "Huacipeuh"
  PROV1424:0 "Minisan Bay"
  PROV1425:0 "Yankutlahk"
@@ -1428,61 +1428,61 @@
  PROV1427:0 "Axoxopan"
  PROV1428:0 "Yahuacoma"
  PROV1429:0 "Yecentlachica"
- PROV1430:0 "1430"
- PROV1431:0 "1431"
- PROV1432:0 "1432"
- PROV1433:0 "1433"
- PROV1434:0 "1434"
- PROV1435:0 "1435"
+ PROV1430:0 "Huitzan"
+ PROV1431:0 "Motlatlaliliani"
+ PROV1432:0 "Centlacuitlanahuatectl"
+ PROV1433:0 "Xochitotol"
+ PROV1434:0 "Cuicanitototl"
+ PROV1435:0 "Cuicatiliztli"
  PROV1436:0 "1436"
- PROV1437:0 "1437"
- PROV1438:0 "1438"
- PROV1439:0 "1439"
- PROV1440:0 "1440"
+ PROV1437:0 "Choquiliztli"
+ PROV1438:0 "Cuauhchayahuallo"
+ PROV1439:0 "Tepozhuitzoctli"
+ PROV1440:0 "Tlaximalli"
  PROV1441:0 "Nehuanal"
- PROV1442:0 "1442"
- PROV1443:0 "1443"
- PROV1444:0 "1444"
- PROV1445:0 "1445"
+ PROV1442:0 "Xochimaca"
+ PROV1443:0 "Papachcac"
+ PROV1444:0 "Cuauhtencoztli"
+ PROV1445:0 "Xiuhtoctlaolli"
  PROV1446:0 "Cittilatlan"
- PROV1447:0 "1447"
- PROV1448:0 "1448"
- PROV1449:0 "1449"
- PROV1450:0 "1450"
- PROV1451:0 "1451"
- PROV1452:0 "1452"
- PROV1453:0 "1453"
- PROV1454:0 "1454"
+ PROV1447:0 "Ichcame"
+ PROV1448:0 "Michaxiliztli"
+ PROV1449:0 "Cuacuauhtentzone"
+ PROV1450:0 "Atlaquetzalli"
+ PROV1451:0 "Teoamoxtli"
+ PROV1452:0 "Pixquiztli"
+ PROV1453:0 "Tlachicahualiztli"
+ PROV1454:0 "Xuxuchitla"
  PROV1455:0 "Achtoteopan"
  PROV1456:0 "Tepexichan"
  PROV1457:0 "1457"
  PROV1458:0 "1458"
  PROV1459:0 "Chapukar"
- PROV1460:0 "1460"
- PROV1461:0 "1461"
+ PROV1460:0 "Ichcatilmatli"
+ PROV1461:0 "Icuitl"
  PROV1462:0 "Ayanihati Coast"
  PROV1463:0 "Qaevan Sea"
  PROV1464:0 "1464"
- PROV1465:0 "1465"
- PROV1466:0 "1466"
+ PROV1465:0 "Tetepoz"
+ PROV1466:0 "Teocuitlacozcatl"
  PROV1467:0 "1467"
- PROV1468:0 "1468"
- PROV1469:0 "1469"
- PROV1470:0 "1470"
- PROV1471:0 "1471"
- PROV1472:0 "1472"
- PROV1473:0 "1473"
- PROV1474:0 "1474"
- PROV1475:0 "1475"
- PROV1476:0 "1476"
- PROV1477:0 "1477"
- PROV1478:0 "1478"
+ PROV1468:0 "Xochatl"
+ PROV1469:0 "Iyetl"
+ PROV1470:0 "Aceitecuahuitl"
+ PROV1471:0 "Cuacuauhpiya"
+ PROV1472:0 "Tlapohualamoxtli"
+ PROV1473:0 "Tecuampiltontli"
+ PROV1474:0 "Mizconetl"
+ PROV1475:0 "Caxpialoyan"
+ PROV1476:0 "Tletzintli"
+ PROV1477:0 "Amatepetl"
+ PROV1478:0 "Azcapotzalli"
  PROV1479:0 "1479"
- PROV1480:0 "1480"
+ PROV1480:0 "Potzalli"
  PROV1481:0 "Dakhal Bay"
  PROV1482:0 "1482"
- PROV1483:0 "1483"
- PROV1484:0 "1484"
+ PROV1483:0 "Cuahuitl"
+ PROV1484:0 "Tepeticpac"
  PROV1485:0 "Dušagan Sea"
  PROV1486:0 "1486"
  PROV1487:0 "Vazixani Coast"
@@ -1518,15 +1518,15 @@
  PROV1517:0 "Xilchitza"
  PROV1518:0 "Hixich'en"
  PROV1519:0 "Parcha"
- PROV1520:0 "1520"
- PROV1521:0 "1521"
+ PROV1520:0 "Aneloloni"
+ PROV1521:0 "Tzotzomatli"
  PROV1522:0 "1522"
- PROV1523:0 "1523"
+ PROV1523:0 "Quentli"
  PROV1524:0 "1524"
- PROV1525:0 "1525"
+ PROV1525:0 "Neolololli"
  PROV1526:0 "1526" #!
- PROV1527:0 "1527"
- PROV1528:0 "1528"
+ PROV1527:0 "Xochicuauhtla"
+ PROV1528:0 "Tlalmanqui"
  PROV1529:0 "Ku'lajax"
  PROV1530:0 "Xilapacutlan"
  PROV1531:0 "Kinchi"
